test/Fail/Issue2788c.err
Issue2788c.agda:8.1-39: error: [NeedOptionCubical]
Option --cubical[={full,erased,no-glue}] required
when checking the pragma BUILTIN PATHP PathP
